<resources>
    <string name="app_name">Wild Food Foraging</string>
    <string name="foragingTitle">Welcome User</string>
    <string name="foragingSubtitle">Please Enter The Food Foraged</string>
    <string name="foragingButton">Add Foraged Food</string>
    <string name="scientificPlantName">Scientific Plant Name</string>
    <string name="commonPlantName">Common Plant Name</string>
    <string name="datePlantPicked">Date Plant Picked</string>
    <string name="enter_all_fields">Enter All Fields</string>
    <string name="all_fields_entered">All Fields Entered</string>
    <string name="action_foraging">Add Foraged Food</string>
    <string name="action_foraging_list">Foraged Food List</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Wild Food Foraging</string>
    <string name="nav_header_subtitle">Wild and Free</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="food_Not_Found">"You haven't foraged any food yet\nTime to start!!"</string>
    <string name="foragingError">Error : Couldn\'t add food :(</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>
    <string name="action_plant_detail">Plant Details</string>

    <string name="messageLoading">Please Wait while the foraged food are Loading...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="darkmode">Dark Mode</string>
    <string name="chooseTheme">Select Theme</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="nav_header_email">test@mail.com</string>
    <string name="select_foraging_image">Select foraging image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
