<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/foragingListFragment">

    <fragment
        android:id="@+id/foragingFragment"
        android:name="ie.wit.foraging.ui.foraging.ForagingFragment"
        android:label="@string/action_foraging"
        tools:layout="@layout/fragment_foraging" >
        <action
            android:id="@+id/action_foragingFragment_to_foragingListFragment"
            app:destination="@id/foragingListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/foragingListFragment"
        android:name="ie.wit.foraging.ui.foragingList.ForagingListFragment"
        android:label="@string/action_foraging_list"
        tools:layout="@layout/fragment_foraging_list" >
        <action
            android:id="@+id/action_foragingListFragment_to_foragingFragment"
            app:destination="@id/foragingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_foragingListFragment_to_plantDetailFragment"
            app:destination="@id/plantDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/plantDetailFragment"
        android:name="ie.wit.foraging.ui.detail.PlantDetailFragment"
        android:label="@string/action_plant_detail"
        tools:layout="@layout/fragment_plant_detail" >
        <action
            android:id="@+id/action_plantDetailFragment_to_foragingListFragment"
            app:destination="@id/foragingListFragment" />
        <argument
            android:name="foragingid"
            app:argType="string" />
    </fragment>
</navigation>